Weather app with charts

--- a/index.html
+++ b/index.html
@@ -4,21 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel= "stylesheet" href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css'>
+    <link rel= "stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <link rel= "stylesheet" type="text/css" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Search for weather</h1>
+    <h1 class="mainHeader">Search for weather</h1>
     <div class="inputContainer">
         <form>
-            <input type="text" class="userText" placeholder="Enter a city name">
-            <button type="button"><i class="fas fa-search"></i></button>
+            <input type="text" class="userText" placeholder="Enter a city name" maxlength="16">
+            <button type="button" id="look"><i class="fas fa-search"></i></button>
         </form>
+        <button id="one" class="choice">24H</button>
+        <button id="two" class="choice">48H</button>
     </div>
     <div class= "responseContainer">
 
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
     <script src="data.js" type="module"></script>
     <script src="skycons.js"></script>
 </body>
