Dodanie chartow i obslugi bledow

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         <button id="one" class="choice">24H</button>
         <button id="two" class="choice">48H</button>
     </div>
+    <div id="locErr" style="display: none;">
+        <i class="fas fa-exclamation-triangle"></i>
+        Please enter valid location
+    </div>
     <div class= "responseContainer">
 
     </div>
