--- a/index.html
+++ b/index.html
@@ -28,5 +28,8 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
     <script src="data.js" type="module"></script>
     <script src="skycons.js"></script>
+    <footer>
+        Powered by Dark Sky API by The Dark Sky Company, LLC
+    </footer>
 </body>
 </html>
